@@ -1,3 +1,9 @@
+2013-07-11
+----------
+
+Added Mersenne Twister Generator
+
+
 2013-07-10
 ----------
 
